# spy-signal-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: add-indicator.md  add-strategy.md  backtest.md  quality-check.md
docs/: CLAUDE_CODE_SESSION_PROMPTS.md
scripts/: backfill_data.py  run_backtest.py  run_cpcv.py  run_monte_carlo.py  test_telegram.py  train_ml_scorer.py
src/: config.py  main.py  models.py
src/alerts/: __init__.py  dispatcher.py  formatter.py  telegram.py
src/api/: routes.py
src/backtest/: cpcv_validation.py  data_loader.py  engine.py  metrics.py  ml_backtest.py  ml_features.py  ml_scorer.py  monte_carlo.py  vix_data.py  volume_profile.py
src/dashboard/: app.py
src/filters/: earnings_calendar.py  economic_calendar.py  vix_term_structure.py
src/indicators/: batch.py  registry.py  streaming.py
src/ingestion/: historical.py  websocket.py
src/levels/: __init__.py  daily_levels.py  dynamic.py  kalman_levels.py  opening_range.py  vwap.py
src/risk/: __init__.py  cooldown.py  manager.py  position_sizing.py
src/signals/: ml_scorer.py
src/storage/: database.py  queries.py
src/strategies/: __init__.py  base.py  candlestick_filters.py  failed_breakout.py  hmm_regime.py  orb.py  regime.py
tests/: test_alerts.py  test_backtest.py  test_candlestick_filters.py  test_indicators.py  test_ingestion.py  test_integration.py  test_levels.py  test_risk.py  test_strategies.py
